=== (In Git)

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 551

=== 2014-10-28

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 550
  * Upgraded Ruby 2.0.0 to patchlevel 594
  * Upgraded Ruby 2.1 to version 2.1.4

=== 2014-09-19

* Enhancements:
  * Upgraded Ruby 2.1 to version 2.1.3
  * Upgraded Ruby 2.0.0 to patchlevel 576
  * Upgraded RubyGems to version 1.8.29
  * Upgraded OpenSSL to version 1.0.0n
  * Upgraded zlib to version 1.2.8

* Internal:
  * Attempt to fix exception caused by proxy/redirect response missing
    Content-Length information. Contribution by Enrique Perez-Terron.

=== 2014-05-11

* Enhancements:
  * Upgraded Ruby 2.1 package to version 2.1.2
  * Upgraded Ruby 2.0.0 to patchlevel 481
  * Upgraded libyaml to version 0.1.6

=== 2014-02-25

* Enhancements:
  * Upgraded Ruby 2.0.0 to patchlevel 451
  * Upgraded Ruby 1.9.3 to patchlevel 545
  * Upgraded rb-readline to 0.5.0 (compatible with Ruby 2.0)
  * Upgraded OpenSSL to version 1.0.0l
  * Upgraded libyaml to version 0.1.5

=== 2013-11-24

* Enhancements:
  * Upgraded Ruby 2.0.0 to patchlevel 353
  * Upgraded Ruby 1.9.3 to patchlevel 484
  * Upgraded RubyGems to version 1.8.28
  * Update mingwbuilds recipes for both 32 and 64bits (4.7.3 rev1)

* Internal:
  * Add task to automate pushing releases to bintray.com

=== 2013-07-07

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 374
  * Upgraded Ruby 1.9.3 to patchlevel 448
  * Upgraded Ruby 2.0.0 to patchlevel 247

=== 2013-05-17

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 429
  * Upgraded Ruby 2.0.0 to patchlevel 195

=== 2013-02-24 / Happy Birthday Ruby Edition!

* Enhancements:
  * Upgraded Ruby 2.0.0 to patchlevel 0
  * Upgraded rb-readline to 0.5.0.pre.1 (compatible with Ruby 2.0)

* Bugfixes:
  * Generate documentation for target version of Ruby

=== 2013-02-22

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 392
  * Upgraded OpenSSL to version 1.0.0k

=== 2013-02-07

* Enhancements: